--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,5 @@
+{<img src="https://travis-ci.org/halfdan/piwik_analytics.png" />}[https://travis-ci.org/halfdan/piwik_analytics]
+
 = PiwikAnalytics
 
 **Note:** This Gem has undergone a major rewrite in 1.x compared to 0.9.x.
